资源包/LabVIEW有用程序/例程DMC3000系列/VB6.0/例11_两轴高级轨迹规划PVT_VB/LTDMC.bas


        Declare Function dmc_arc_move_center_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal AxisNum As Integer, ByRef AxisList As Integer, ByRef target_Pos As Double, ByRef cen_Pos As Double, ByVal arc_dir As Integer, ByVal CircleNum As Long, ByVal posi_mode As Integer) As Integer    '圆心终点式圆弧/螺旋线/渐开线
        Declare Function dmc_arc_move_radius_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal AxisNum As Integer, ByRef AxisList As Integer, ByRef target_Pos As Double, ByVal arc_radius As Double, ByVal arc_dir As Integer, ByVal CircleNum As Long, ByVal posi_mode As Integer) As Integer   '半径终点式圆弧/螺旋线
        Declare Function dmc_arc_move_3points_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal AxisNum As Integer, ByRef AxisList As Integer, ByRef target_Pos As Double, ByRef mid_pos As Double, ByVal CircleNum As Long, ByVal posi_mode As Integer) As Integer    '三点式圆弧/螺旋线

        Declare Function dmc_read_current_speed_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef current_speed As Double) As Integer  '轴当前运行速度
        Declare Function dmc_set_vector_profile_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal Min_Vel As Double, ByVal Max_Vel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal Stop_vel As Double) As Integer    '单段插补速度参数
        Declare Function dmc_get_vector_profile_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByRef Min_Vel As Double, ByRef Max_Vel As Double, ByRef Tacc As Double, ByRef Tdec As Double, ByRef Stop_vel As Double) As Integer

        Declare Function dmc_set_profile_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Min_Vel As Double, ByVal Max_Vel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal Stop_vel As Double) As Integer   '单轴速度参数
        Declare Function dmc_get_profile_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef Min_Vel As Double, ByRef Max_Vel As Double, ByRef Tacc As Double, ByRef Tdec As Double, ByRef Stop_vel As Double) As Integer
        
        Declare Function dmc_reset_target_position_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal New_pos As Double) As Integer   '在线变位
        Declare Function dmc_update_target_position_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal New_pos As Double) As Integer   '强行变位
        Declare Function dmc_change_speed_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal New_vel As Double, ByVal Taccdec As Double) As Integer           '在线变速

        '连续插补
        Declare Function dmc_conti_open_list Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal AxisNum As Integer, ByRef AxisList As Integer) As Integer     '打开连续缓存区
        Declare Function dmc_conti_close_list Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer) As Integer     '关闭连续缓存区
        Declare Function dmc_conti_stop_list Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal stop_mode As Integer) As Integer    '连续插补中停止
        Declare Function dmc_conti_pause_list Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer) As Integer     '连续插补中暂停
        Declare Function dmc_conti_start_list Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer) As Integer    '开始连续插补
        Declare Function dmc_conti_remain_space Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer) As Long     '查连续插补剩余缓存数
        Declare Function dmc_conti_read_current_mark Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer) As Long  '读取当前连续插补段的标号
        Declare Function dmc_conti_set_blend Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal enable As Integer) As Integer    'blend拐角过度模式
        Declare Function dmc_conti_get_blend Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByRef enable As Integer) As Integer

        Declare Function dmc_conti_set_profile_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal Min_Vel As Double, ByVal Max_Vel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal Stop_vel As Double) As Integer   '设置连续插补速度
        Declare Function dmc_conti_set_s_profile Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal s_mode As Integer, ByVal s_para As Double) As Integer      '设置连续插补平滑时间
        Declare Function dmc_conti_get_s_profile Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal s_mode As Integer, ByRef s_para As Double) As Integer

        Declare Function dmc_conti_set_pause_output Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal action As Integer, ByVal mask As Long, ByVal state As Long) As Integer   '暂停时IO输出 action 0, 不工作；1， 暂停时输出io_state; 2 暂停时输出io_state, 继续运行时首先恢复原来的io; 3,在2的基础上，停止时也生效
        Declare Function dmc_conti_get_pause_output Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByRef action As Integer, ByRef mask As Long, ByRef state As Long) As Integer
        Declare Function dmc_conti_set_override Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal Percent As Double) As Integer   '设置每段速度比例  缓冲区指令
        Declare Function dmc_conti_change_speed_ratio Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal Percent As Double) As Integer   '连续插补动态变速
        Declare Function dmc_conti_get_run_state Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer) As Integer    '读取连续插补状态：0-运行，1-暂停，2-正常停止，3-异常停止
        Declare Function dmc_conti_check_done Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer) As Integer      '检测连续插补运动状态：0-运行，1-停止
        Declare Function dmc_conti_wait_input Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal bitno As Integer, ByVal on_off As Integer, ByVal TimeOut As Double, ByVal mark As Long) As Integer   '设置连续插补等待输入

        Declare Function dmc_conti_delay_outbit_to_start Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal bitno As Integer, ByVal on_off As Integer, ByVal delay_value As Double, ByVal delay_mode As Integer, ByVal ReverseTime As Double) As Integer    '相对于轨迹段起点IO滞后输出
        Declare Function dmc_conti_delay_outbit_to_stop Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal bitno As Integer, ByVal on_off As Integer, ByVal delay_time As Double, ByVal ReverseTime As Double) As Integer   '相对于轨迹段终点IO滞后输出
        Declare Function dmc_conti_ahead_outbit_to_stop Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal bitno As Integer, ByVal on_off As Integer, ByVal ahead_value As Double, ByVal ahead_mode As Integer, ByVal ReverseTime As Double) As Integer  '相对轨迹段终点IO提前输出
        Declare Function dmc_conti_accurate_outbit_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal cmp_no As Integer, ByVal on_off As Integer, ByVal map_axis As Integer, ByVal abs_pos As Double, ByVal pos_source As Integer, ByVal ReverseTime As Double) As Integer     '确定位置精确输出
        Declare Function dmc_conti_write_outbit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal bitno As Integer, ByVal on_off As Integer, ByVal ReverseTime As Double) As Integer     '缓冲区立即IO输出

        Declare Function dmc_conti_delay Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal delay_time As Double, ByVal mark As Long) As Integer    '添加延时指令
        Declare Function dmc_conti_line_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal AxisNum As Integer, ByRef AxisList As Integer, ByRef target_Pos As Double, ByVal posi_mode As Integer, ByVal mark As Long) As Integer    '连续插补直线
        Declare Function dmc_conti_arc_move_center_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal AxisNum As Integer, ByRef AxisList As Integer, ByRef target_Pos As Double, ByRef cen_Pos As Double, ByVal arc_dir As Integer, ByVal CircleNum As Long, ByVal posi_mode As Integer, ByVal mark As Long) As Integer    '圆心终点式圆弧/螺旋线/渐开线
        Declare Function dmc_conti_arc_move_radius_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal AxisNum As Integer, ByRef AxisList As Integer, ByRef target_Pos As Double, ByVal arc_radius As Double, ByVal arc_dir As Integer, ByVal CircleNum As Long, ByVal posi_mode As Integer, ByVal mark As Long) As Integer   '半径终点式圆弧/螺旋线
        Declare Function dmc_conti_arc_move_3points_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal AxisNum As Integer, ByRef AxisList As Integer, ByRef target_Pos As Double, ByRef mid_pos As Double, ByVal CircleNum As Long, ByVal posi_mode As Integer, ByVal mark As Long) As Integer    '三点式圆弧/螺旋线

        Declare Function dmc_conti_clear_io_action Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal IoMask As Long) As Integer   '清除段内未执行完的IO动作
        Declare Function dmc_get_stop_reason Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef StopReason As Long) As Integer   '读取轴停止原因
        Declare Function dmc_clear_stop_reason Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Integer   '清除轴停止原因


        Declare Function dmc_rectangle_move_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal AxisNum As Integer, ByRef AxisList As Integer, ByRef target_Pos As Double, ByRef Mark_Pos As Double, ByVal Count As Long, ByVal rect_mode As Integer, ByVal posi_mode As Integer) As Integer
        Declare Function dmc_conti_rectangle_move_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal AxisNum As Integer, ByRef AxisList As Integer, ByRef target_Pos As Double, ByRef Mark_Pos As Double, ByVal Count As Long, ByVal rect_mode As Integer, ByVal posi_mode As Integer, ByVal mark As Long) As Integer

        Declare Function dmc_calculate_arclength_center Lib "LTDMC.dll" (ByRef start_pos As Double, ByRef target_Pos As Double, ByRef cen_Pos As Double, ByVal arc_dir As Integer, ByVal ArcCircle As Double, ByRef ArcLength As Double) As Integer
        Declare Function dmc_calculate_arclength_3point Lib "LTDMC.dll" (ByRef start_pos As Double, ByRef mid_pos As Double, ByRef target_Pos As Double, ByVal ArcCircle As Double, ByRef ArcLength As Double) As Integer
        Declare Function dmc_calculate_arclength_radius Lib "LTDMC.dll" (ByRef start_pos As Double, ByRef target_Pos As Double, ByVal arc_radius As Double, ByVal arc_dir As Integer, ByVal ArcCircle As Double, ByRef ArcLength As Double) As Integer
        Declare Function dmc_conti_set_involute_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal mode As Integer) As Integer
        Declare Function dmc_conti_get_involute_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByRef mode As Integer) As Integer



     
     
''函数参数必须严格保持一致性
            
''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
'''                                 LTDMC V1.1 end of module                       '''
''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''

